--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
     <title> Hiccup's Steps to Training a Dragon </title>
     <link rel= "icon" href= "file:///Users/tiairani/Downloads/toothless.png" >
   </head>
+  <body>
+    <h1>This is what h1 looks like.</h1>
+    <h2>This is what h2 looks like.</h2>
+    <h3>This is what h3 looks like.</h3>
+    <h4>This is what h4 looks like.</h4>
+    <h5>This is what h5 looks like.</h5>
+    <h6>This is what h6 looks like.</h6>
+  </body>
   
 </html>
