--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
   </head>
   <body>
     <h1>This is what h1 looks like.</h1>
-    <h2>This is what h2 looks like.</h2>
+    <h2 id="example2">This is what h2 looks like.</h2>
     <h3>This is what h3 looks like.</h3>
     <h4>This is what h4 looks like.</h4>
     <h5>This is what h5 looks like.</h5>
     <h6>This is what h6 looks like.</h6>
+
+    <b>This is what b does.</b>
+    <strong>This is what strong does.</strong>
+    <i>This is what i does.</i>
+    <em>This is what emph does.</em>
+    <a href="#example2">This is what a does.</a>
+    <br>
   </body>
   
 </html>
