--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
     <em>This is what emph does.</em>
     <a href="#example2">This is what a does.</a>
     <br>
+    <p>
+      This is what all of those look like within a 'p' block of code.
+      <b>This is what b does.</b>
+      <strong>This is what strong does.</strong>
+      <i>This is what i does.</i>
+      <em>This is what emph does.</em>
+      <a href="#example2">This is what a does.</a>
+      <br>
+    </p>
   </body>
   
 </html>
