--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
       <a href="#example2">This is what a does.</a>
       <br>
     </p>
+    <p>Within separate 'p' blocks of code:</p>
+    <p><b>This is what b does.</b></p>
+    <p><strong>This is what strong does.</strong></p>
+    <p><i>This is what i does.</i></p>
+    <p><em>This is what emph does.</em></p>
+    <p><a href="#example2">This is what a does.</a></p>
+    <p><br></p>
+    
   </body>
   
 </html>
