--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
     <p><em>This is what emph does.</em></p>
     <p><a href="#example2">This is what a does.</a></p>
     <p><br></p>
+
+    <section>
+      <p>This is what a section looks like:</p>
+      <p><strong>This is what strong does.</strong></p>
+      <p><i>This is what i does.</i></p>
+      <p><em>This is what emph does.</em></p>
+    </section>
     
   </body>
   
