--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <header>
+      <div>This is what div looks like.</div>
       <h1>This is a header with h1</h1>
       <h2>This is a header with h2</h2>
       <h3>This is a header with h3</h3>
