--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   </head>
   <body>
     <header>
-      <div>This is what div looks like.</div>
+      <div>ALL MEETING NOTES</div>
+      <nav>
+        <ul>
+          <li><a id="#attendance">Attendance</a></li>
+          <li><a id="#summary">Summary</a></li>
+          <li><a id="#agenda">Agenda</a></li>
+          <li><a id="#main">Main Points</a></li>
+        </ul>
+      </nav>
       <h1>This is a header with h1</h1>
       <h2>This is a header with h2</h2>
       <h3>This is a header with h3</h3>
