--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
           <li><a id="#main">Main Points</a></li>
         </ul>
       </nav>
-      <h1>This is a header with h1</h1>
-      <h2>This is a header with h2</h2>
-      <h3>This is a header with h3</h3>
-      <h4>This is a header with h4</h4>
-      <h5>This is a header with h5</h5>
-      <h6>This is a header with h6</h6>
     </header>
+    <main>
+      <h1>Meeting Notes - How to Train Your Dragon</h1>
+      <h2>Date: April 14, XXXX</h2>
+    </main>
     <h1>This is what h1 looks like.</h1>
     <h2 id="example2">This is what h2 looks like.</h2>
     <h3>This is what h3 looks like.</h3>
