--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     </header>
     <main>
       <h1>Meeting Notes - How to Train Your Dragon</h1>
+      <img
+        src="https://acmi-website-media-prod.s3.ap-southeast-2.amazonaws.com/media/images/To_Berk_and_Beyond-_How_to_train_your_Dragon.original.jpg"
+        alt="man holding hand out to dragon."
+        width="250"
+      >
       <h2>Date: April 14, XXXX</h2>
     </main>
     <h1>This is what h1 looks like.</h1>
