--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
         alt="man holding hand out to dragon."
         width="250"
       >
+      <br>
       <h2>Date: April 14, XXXX</h2>
+      <br>
+      <h2 id="attendance">Attendance</h2>
+      <ol>
+        <li><input type="checkbox">Hiccup Haddock III </></li>
+      </ol>
     </main>
     <h1>This is what h1 looks like.</h1>
     <h2 id="example2">This is what h2 looks like.</h2>
