--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       >
       <br>
       <h2>Date: April 14, XXXX</h2>
-      <br>
       <h2 id="attendance">Attendance</h2>
       <ol>
-        <li><input type="checkbox">Hiccup Haddock III </></li>
+        <li><input type="text">Hiccup Haddock III </></li>
+        <li><input type="text">Astrid Hofferson</></li>
       </ol>
     </main>
     <h1>This is what h1 looks like.</h1>
