--- a/index.html
+++ b/index.html
@@ -30,8 +30,15 @@
       <h2>Date: April 14, XXXX</h2>
       <h2 id="attendance">Attendance</h2>
       <ol>
-        <li><input type="text">Hiccup Haddock III </></li>
-        <li><input type="text">Astrid Hofferson</></li>
+        <li>Hiccup Haddock III </li>
+        <li>Astrid Hofferson</li>
+        <li>Snotlout</li>
+        <li>Tuffnut</li>
+        <li>Ruffnut</li>
+        <li>Fishlegs</li>
+        <li>Gobber</li>
+        <p>If any were not included then list them below: </p>
+        <li><input type="text"></></li>
       </ol>
     </main>
     <h1>This is what h1 looks like.</h1>
