--- a/index.html
+++ b/index.html
@@ -37,9 +37,15 @@
         <li>Ruffnut</li>
         <li>Fishlegs</li>
         <li>Gobber</li>
-        <p>If any were not included then list them below: </p>
-        <li><input type="text"></></li>
+        <li>Stoick the Vast</li>
       </ol>
+      <p>If any were not included, add them below:</p>
+      <ul>
+        <li><input type="text"></></li>
+        <li><input type="text"></></li>
+        <li><input type="text"></></li>
+        <li><input type="text"></></li>
+      </ul>
     </main>
     <h1>This is what h1 looks like.</h1>
     <h2 id="example2">This is what h2 looks like.</h2>
