--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         <li><input type="text"></></li>
         <li><input type="text"></></li>
       </ul>
+      <br>
+      <h2 id="agenda">Meeting Agenda</h2>
+      <h3><em>A brief overview of talking points.</em></h3>
     </main>
     <h1>This is what h1 looks like.</h1>
     <h2 id="example2">This is what h2 looks like.</h2>
