--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         width="250"
       >
       <br>
-      <h2>Date: April 14, XXXX</h2>
+      <h2>Date:<input type="date"></></h2>
       <h2 id="attendance">Attendance</h2>
       <ol>
         <li>Hiccup Haddock III </li>
