--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <div>ALL MEETING NOTES</div>
       <nav>
         <ul>
-          <li><a id="#attendance">Attendance</a></li>
-          <li><a id="#summary">Summary</a></li>
-          <li><a id="#agenda">Agenda</a></li>
-          <li><a id="#main">Main Points</a></li>
+          <li><a href="#attendance">Attendance</a></li>
+          <li><a href="#summary">Summary</a></li>
+          <li><a href="#agenda">Agenda</a></li>
+          <li><a href="#main">Main Points</a></li>
         </ul>
       </nav>
     </header>
@@ -49,6 +49,12 @@
       <br>
       <h2 id="agenda">Meeting Agenda</h2>
       <h3><em>A brief overview of talking points.</em></h3>
+      <section>
+        <p>The points that are <i>italicized</i> are </p>
+        <ul>
+          <li>hello</li>
+        </ul>
+      </section>
     </main>
     <h1>This is what h1 looks like.</h1>
     <h2 id="example2">This is what h2 looks like.</h2>
