--- a/index.html
+++ b/index.html
@@ -50,9 +50,21 @@
       <h2 id="agenda">Meeting Agenda</h2>
       <h3><em>A brief overview of talking points.</em></h3>
       <section>
-        <p>The points that are <i>italicized</i> are </p>
+        <p>The points that are <b>bold</b> are the main talking points.</p>
         <ul>
-          <li>hello</li>
+          <li><b>Prejudices Surrounding Dragons</b></li>
+          <ul>
+            <li>Why people fear them</li>
+          </ul>
+          <li><b>Why the prejudices are wrong.</b></li>
+          <li><b>How to rectify public opinion.</b></li>
+          <li><b>How to train a dragon</b></li>
+          <ol>
+            <li>Finding a Dragon</li>
+            <li><strong>Befriending a Dragon</strong></li>
+            <li>Earning a Dragon's Trust</li>
+          </ol>
+          <li>Integrating Dragons into everyday life.</li>
         </ul>
       </section>
     </main>
