--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <li><input type="text"></></li>
         <li><input type="text"></></li>
       </ul>
-      <br>
+      <br><hr>
       <h2 id="agenda">Meeting Agenda</h2>
-      <h3><em>A brief overview of talking points.</em></h3>
+      <h3><em>Brief overview of potential talking points.</em></h3>
       <section>
         <p>The points that are <b>bold</b> are the main talking points.</p>
         <ul>
