--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li><b>How to rectify public opinion.</b></li>
           <li><b>How to train a dragon</b></li>
           <ol>
-            <li>Finding a Dragon</li>
+            <li><span>Finding a Dragon</span></li>
             <li><strong>Befriending a Dragon</strong></li>
             <li>Earning a Dragon's Trust</li>
           </ol>
@@ -68,6 +68,7 @@
         </ul>
       </section>
     </main>
+    <hr>
     <h1>This is what h1 looks like.</h1>
     <h2 id="example2">This is what h2 looks like.</h2>
     <h3>This is what h3 looks like.</h3>
