--- a/index.html
+++ b/index.html
@@ -27,43 +27,38 @@
         width="250"
       >
       <br>
-      <h2>Date:<input type="date"></></h2>
+      <h2>Date:<input type="date"></h2>
       <h2 id="attendance">Attendance</h2>
       <ol>
-        <li>Hiccup Haddock III </li>
-        <li>Astrid Hofferson</li>
-        <li>Snotlout</li>
-        <li>Tuffnut</li>
-        <li>Ruffnut</li>
-        <li>Fishlegs</li>
-        <li>Gobber</li>
-        <li>Stoick the Vast</li>
+        <li><input type="text"></li>
+        <li><input type="text"></li>
+        <li><input type="text"></li>
+        <li><input type="text"></li>
+        <li><input type="text"></li>
+        <li><input type="text"></li>
       </ol>
-      <p>If any were not included, add them below:</p>
-      <ul>
-        <li><input type="text"></></li>
-        <li><input type="text"></></li>
-        <li><input type="text"></></li>
-        <li><input type="text"></></li>
-      </ul>
       <br><hr>
-      <h2 id="agenda">Meeting Agenda</h2>
-      <h3><em>Brief overview of potential talking points.</em></h3>
       <section>
+        <h2 id="agenda">Meeting Agenda</h2>
+        <h3><em>Brief overview of potential talking points.</em></h3>
         <p>The points that are <b>bold</b> are the main talking points.</p>
         <ul>
           <li><b>Prejudices Surrounding Dragons</b></li>
-          <ul>
+          <li>
+            <ul>
             <li>Why people fear them</li>
-          </ul>
+            </ul>
+          </li>
           <li><b>Why the prejudices are wrong.</b></li>
           <li><b>How to rectify public opinion.</b></li>
           <li><b>How to train a dragon</b></li>
-          <ol>
+          <li>
+            <ol>
             <li><span>Finding a Dragon</span></li>
             <li><strong>Befriending a Dragon</strong></li>
             <li>Earning a Dragon's Trust</li>
-          </ol>
+            </ol>
+          </li>
           <li>Integrating Dragons into everyday life.</li>
         </ul>
       </section>
@@ -100,6 +95,7 @@
     <p><br></p>
 
     <section>
+      <h1>Section 1</h1>
       <p>This is what a section looks like:</p>
       <p><strong>This is what strong does.</strong></p>
       <p><i>This is what i does.</i></p>
