--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a href="#attendance">Attendance</a></li>
           <li><a href="#summary">Summary</a></li>
           <li><a href="#agenda">Agenda</a></li>
-          <li><a href="#main">Main Points</a></li>
+          <li><a href="#previous">Previous Meeting Summary</a></li>
         </ul>
       </nav>
     </header>
@@ -61,6 +61,25 @@
           </li>
           <li>Integrating Dragons into everyday life.</li>
         </ul>
+      </section>
+
+      <section>
+        <h2 id="previous">Previous Meeting Summary</h2>
+        <p>
+          In the previous meeting, there was a bit of professional discourse between <i>Hiccup and his father</i>, specifically on how to incorporate the dragons into everyday life.
+          There was also the case of building specific facilities in order to accomodate the differing needs between dragons and humans. Such as:
+        </p>
+        <ul>
+          <li>Dragon Pens</li>
+          <li>Saddle-Making</li>
+          <li>Notes:
+            <ul>
+              <li>Saddle-making will take place in the previous location for the armory.</li>
+            </ul>
+          </li>
+          <li>Feeding stations.</li>
+        </ul>
+        
       </section>
     </main>
     <hr>
