--- a/index.html
+++ b/index.html
@@ -43,16 +43,14 @@
         <h3><em>Brief overview of potential talking points.</em></h3>
         <p>The points that are <b>bold</b> are the main talking points.</p>
         <ul>
-          <li><b>Prejudices Surrounding Dragons</b></li>
-          <li>
+          <li><b>Prejudices Surrounding Dragons</b>
             <ul>
             <li>Why people fear them</li>
             </ul>
           </li>
           <li><b>Why the prejudices are wrong.</b></li>
           <li><b>How to rectify public opinion.</b></li>
-          <li><b>How to train a dragon</b></li>
-          <li>
+          <li><b>How to train a dragon</b>
             <ol>
             <li><span>Finding a Dragon</span></li>
             <li><strong>Befriending a Dragon</strong></li>
@@ -66,20 +64,19 @@
       <section>
         <h2 id="previous">Previous Meeting Summary</h2>
         <p>
-          In the previous meeting, there was a bit of professional discourse between <i>Hiccup and his father</i>, specifically on how to incorporate the dragons into everyday life.
-          There was also the case of building specific facilities in order to accomodate the differing needs between dragons and humans. Such as:
+          The previous meeting discussed more logistical elements of how to <i>incorporate the dragons into everyday life.</i> 
+          specifically the case of building specific facilities in order to accomodate the differing needs between dragons and humans. 
+          Such as:
         </p>
         <ul>
           <li>Dragon Pens</li>
-          <li>Saddle-Making</li>
-          <li>Notes:
+          <li>Saddle-Making:
             <ul>
               <li>Saddle-making will take place in the previous location for the armory.</li>
             </ul>
           </li>
           <li>Feeding stations.</li>
         </ul>
-        
       </section>
     </main>
     <hr>
