--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li>Integrating Dragons into everyday life.</li>
         </ul>
       </section>
-
+      <hr>
       <section>
         <h2 id="previous">Previous Meeting Summary</h2>
         <p>
@@ -77,6 +77,36 @@
           </li>
           <li>Feeding stations.</li>
         </ul>
+      </section>
+      <hr>
+      <section>
+        <h2>New Business to Cover</h2>
+        <ul>
+          <li><input type="checkbox">Where the new feeding stations would go?</li>
+          <li><input type="checkbox">Some discourse amongst the villagers whose sheep keep getting taken.</li>
+          <li><input type="checkbox">Dragon Training - No longer killing.</li>
+        </ul>
+        <form>
+          <fieldset>
+            <legend>Please select your preferred trainer:</legend>
+            <div>
+              <input type="radio" id="trainer1" name="contact" value="astrid">
+              <label for="trainer1">Astrid</label>
+        
+              <input type="radio" id="trainer2" name="contact" value="hiccup">
+              <label for="trainer2">Hiccup</label>
+        
+              <input type="radio" id="trainer3" name="contact" value="snotlout">
+              <label for="trainer3">Snotlout</label>
+
+              <input type="radio" id="trainer4" name="contact" value="fishlegs">
+              <label for="trainer4">Fishlegs</label>
+            </div>
+            <div>
+              <button type="submit">Submit</button>
+            </div>
+          </fieldset>
+        </form>
       </section>
     </main>
     <hr>
