--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <nav>
         <ul>
           <li><a href="#attendance">Attendance</a></li>
-          <li><a href="#summary">Summary</a></li>
           <li><a href="#agenda">Agenda</a></li>
           <li><a href="#previous">Previous Meeting Summary</a></li>
+          <li><a href="#comments">Comments, Concerns, Etc.</a></li>
         </ul>
       </nav>
     </header>
@@ -107,6 +107,14 @@
             </div>
           </fieldset>
         </form>
+      </section>
+
+      <section>
+        <h2 id="comments">Comments, Concerns, Etc.</h2>
+        <textarea id="userinput" name="userinput" rows="6" cols="50">
+          Any other comments, concerns, or potential meeting topics can be entered here.
+        </textarea>
+        
       </section>
     </main>
     <hr>
