--- a/index.html
+++ b/index.html
@@ -125,6 +125,16 @@ Any other comments, concerns, or potential meeting topics can be entered here.
           <option value="Exploratory Parties to find others"></option>
           <option value="Snoggletog Party"></option>
         </datalist>
+
+        <label for="lead">Choose which person you'd rather lead the next meeting:</label>
+        <select name="lead" id="lead">
+          <option value="Fishlegs">Fishlegs</option>
+          <option value="Hiccup">Hiccup</option>
+          <option value="Astrid">Astrid</option>
+          <option value="Snotlout">Snotlout</option>
+          <option value="Stoick">Stoick</option>
+          <option value="Gobber">Gobber</option>
+        </select>
         
       </section>
     </main>
