--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
           </li>
           <li>Integrating Dragons into everyday life.</li>
         </ul>
+        <details>
+          <summary>Meeting Summary</summary>
+          The main topic of discussion was the prejudices still surrounding dragons. It will definitely be a reoccurring element in later meetings as well.
+        </details>
+        
       </section>
       <hr>
       <section>
