--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@ Any other comments, concerns, or potential meeting topics can be entered here.
       <p><i>This is what i does.</i></p>
       <p><em>This is what emph does.</em></p>
     </section>
+
+    <footer>
+      <video src="toothlessvideo.mov" controls></video>
+    </footer>
     
   </body>
   
