--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Any other comments, concerns, or potential meeting topics can be entered here.
         </select>
       </section>
 
-      <video src="./toothlessvideo.mov" controls></video>
+      <video src="file:///Users/tiairani/Downloads/toothlessvideo.mp4" controls></video>
       
     </main>
     <hr>
