--- a/index.html
+++ b/index.html
@@ -143,7 +143,12 @@ Any other comments, concerns, or potential meeting topics can be entered here.
         </select>
       </section>
 
-      <video src="file:///Users/tiairani/Downloads/toothlessvideo.mp4" controls></video>
+      <section>
+        <h2>Click play button to play video</h2>
+        <video controls>
+            <source  src="file:///Users/tiairani/Downloads/toothlessvideo.mp4">
+        </video>
+      </section>
       
     </main>
     <hr>
