--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Any other comments, concerns, or potential meeting topics can be entered here.
       <section>
         <h2>Click play button to play video</h2>
         <video controls>
-            <source  src="./toothlessvideo.mp4">
+            <source  src="https://drive.google.com/file/d/1tOVTRjCnoySC7qjnFEFaUrWk4AUPd1S7/view">
         </video>
       </section>
       
