--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ Any other comments, concerns, or potential meeting topics can be entered here.
 
       <section>
         <h2>Click play button to play video</h2>
-        <video controls>
+        <video width="350" height="240" controls>
             <source  src="./toothlessvideo (2).mp4" type="video/mp4">
         </video>
       </section>
