--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@ Any other comments, concerns, or potential meeting topics can be entered here.
         <video width="350" height="240" controls>
             <source  src="./toothlessvideo (2).mp4" type="video/mp4">
         </video>
+
+        <h3>Click play button to play audio</h3>
+        <audio>
+          <source src="./toothlessvideo (2).mp4" type="video/mp4">
+        </audio>
       </section>
       
     </main>
@@ -191,7 +196,7 @@ Any other comments, concerns, or potential meeting topics can be entered here.
     </section>
 
     <footer>
-      <video src="./toothlessvideo.mov" controls></video>
+      <p>Next meeting hosted: April XX, XXXX</p>
     </footer>
     
   </body>
