--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Any other comments, concerns, or potential meeting topics can be entered here.
         </video>
 
         <h3>Click play button to play audio</h3>
-        <audio>
+        <audio controls>
           <source src="./toothlessaudio.mp3" type="audio/mpeg">
         </audio>
       </section>
