--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <meta name= "Topic:" content= "How to Train Your Dragon Meeting Notes" >
     <title> Hiccup's Steps to Training a Dragon </title>
     <link rel= "icon" href= "file:///Users/tiairani/Downloads/toothless.png" >
+
+    <style>
+      body {
+        background-color: light blue;
+      }
+      h1 {
+        color: pthalo green;
+        margin-left: 40px;
+      }
+    </style>
+    
   </head>
   <body>
     <header>
