--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
     <link rel= "icon" href= "file:///Users/tiairani/Downloads/toothless.png" >
 
     <style>
-      body {
-        background-color: light blue;
-      }
-      h1 {
-        color: pthalo green;
-        margin-left: 40px;
-      }
+      body {background-color: powderblue;}
+      h1   {color: darkgreen;}
+      p    {color: darkblue;}
     </style>
-    
   </head>
   <body>
     <header>
