--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel= "icon" href= "file:///Users/tiairani/Downloads/toothless.png" >
 
     <style>
-      body {background-color: powderblue;}
+      body {background-color: MintCream;}
       h1   {color: darkgreen;}
       p    {color: darkblue;}
     </style>
