--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name= "Topic:" content= "How to Train Your Dragon Meeting Notes" >
     <title> Hiccup's Steps to Training a Dragon </title>
     <link rel= "icon" href= "file:///Users/tiairani/Downloads/toothless.png" >
-
+    <link rel= "stylesheet" href="./stylesheet.css">
     <style>
       body {background-color: MintCream;}
       h1   {color: darkgreen;}
