--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h2 id="agenda">Meeting Agenda</h2>
         <h3><em>Brief overview of potential talking points.</em></h3>
         <p>The points that are <b>bold</b> are the main talking points.</p>
-        <ul>
+        <ul id="topicslist">
           <li><b>Prejudices Surrounding Dragons</b>
             <ul>
             <li>Why people fear them</li>
