--- a/index.html
+++ b/index.html
@@ -47,50 +47,58 @@
         <h2 id="agenda">Meeting Agenda</h2>
         <h3><em>Brief overview of potential talking points.</em></h3>
         <p>The points that are <b>bold</b> are the main talking points.</p>
-        <ul id="topicslist">
-          <li><b>Prejudices Surrounding Dragons</b>
-            <ul>
-            <li>Why people fear them</li>
-            </ul>
-          </li>
-          <li><b>Why the prejudices are wrong.</b></li>
-          <li><b>How to rectify public opinion.</b></li>
-          <li><b>How to train a dragon</b>
-            <ol>
-            <li><span>Finding a Dragon</span></li>
-            <li><strong>Befriending a Dragon</strong></li>
-            <li>Earning a Dragon's Trust</li>
-            </ol>
-          </li>
-          <li>Integrating Dragons into everyday life.</li>
-        </ul>
-        <details>
-          <summary>Meeting Summary</summary>
-          The main topic of discussion was the prejudices still surrounding dragons. It will definitely be a reoccurring element in later meetings as well.
-        </details>
+        <div id="mainpoints">
+          <ul>
+            <li><b>Prejudices Surrounding Dragons</b>
+              <ul>
+              <li>Why people fear them</li>
+              </ul>
+            </li>
+            <li><b>Why the prejudices are wrong.</b></li>
+            <li><b>How to rectify public opinion.</b></li>
+            <li><b>How to train a dragon</b>
+              <ol>
+              <li><span>Finding a Dragon</span></li>
+              <li><strong>Befriending a Dragon</strong></li>
+              <li>Earning a Dragon's Trust</li>
+              </ol>
+            </li>
+            <li>Integrating Dragons into everyday life.</li>
+          </ul>
+        </div>
+        <div id="meetingsum">
+          <details>
+              <summary>Meeting Summary</summary>
+              The main topic of discussion was the prejudices still surrounding dragons. It will definitely be a reoccurring element in later meetings as well.
+          </details>
+        </div>
         
       </section>
       <hr>
       <section>
         <h2 id="previous">Previous Meeting Summary</h2>
-        <p>
-          The previous meeting discussed more logistical elements of how to <i>incorporate the dragons into everyday life.</i> 
-          specifically the case of building specific facilities in order to accomodate the differing needs between dragons and humans. 
-          Such as:
-        </p>
-        <ul>
-          <li>Dragon Pens</li>
-          <li>Saddle-Making:
-            <ul>
-              <li>Saddle-making will take place in the previous location for the armory.</li>
-            </ul>
-          </li>
-          <li>Feeding stations.</li>
-        </ul>
+        <div id="prevmeetpara">
+          <p>
+            The previous meeting discussed more logistical elements of how to <i>incorporate the dragons into everyday life.</i> 
+            specifically the case of building specific facilities in order to accomodate the differing needs between dragons and humans. 
+            Such as:
+          </p>
+        </div>
+        <div id="prevmeetlist">
+          <ul>
+            <li>Dragon Pens</li>
+            <li>Saddle-Making:
+              <ul>
+                <li>Saddle-making will take place in the previous location for the armory.</li>
+              </ul>
+            </li>
+            <li>Feeding stations.</li>
+          </ul>
+        </div>
       </section>
       <hr>
       <section>
-        <h2>New Business to Cover</h2>
+        <h2 id="newbusiness">New Business to Cover</h2>
         <ul>
           <li><input type="checkbox">Where the new feeding stations would go?</li>
           <li><input type="checkbox">Some discourse amongst the villagers whose sheep keep getting taken.</li>
