--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <div>ALL MEETING NOTES</div>
+      <div class="meetingHeader">ALL MEETING NOTES
       <nav>
         <ul>
           <li><a href="#attendance">Attendance</a></li>
@@ -23,6 +23,7 @@
           <li><a href="#comments">Comments, Concerns, Etc.</a></li>
         </ul>
       </nav>
+      </div>
     </header>
     <main>
       <h1>Meeting Notes - How to Train Your Dragon</h1>
@@ -47,8 +48,8 @@
         <h2 id="agenda">Meeting Agenda</h2>
         <h3><em>Brief overview of potential talking points.</em></h3>
         <p>The points that are <b>bold</b> are the main talking points.</p>
-        <div id="mainpoints">
-          <ul>
+        <div class="main-points">
+          <ul id= "listed-points">
             <li><b>Prejudices Surrounding Dragons</b>
               <ul>
               <li>Why people fear them</li>
@@ -66,7 +67,7 @@
             <li>Integrating Dragons into everyday life.</li>
           </ul>
         </div>
-        <div id="meetingsum">
+        <div class="meeting-sum">
           <details>
               <summary>Meeting Summary</summary>
               The main topic of discussion was the prejudices still surrounding dragons. It will definitely be a reoccurring element in later meetings as well.
@@ -77,15 +78,15 @@
       <hr>
       <section>
         <h2 id="previous">Previous Meeting Summary</h2>
-        <div id="prevmeetpara">
+        <div class="prev-meet-para">
           <p>
             The previous meeting discussed more logistical elements of how to <i>incorporate the dragons into everyday life.</i> 
             specifically the case of building specific facilities in order to accomodate the differing needs between dragons and humans. 
             Such as:
           </p>
         </div>
-        <div id="prevmeetlist">
-          <ul>
+        <div class="prev-meet-list">
+          <ul id= "listed-previous">
             <li>Dragon Pens</li>
             <li>Saddle-Making:
               <ul>
@@ -98,8 +99,9 @@
       </section>
       <hr>
       <section>
-        <h2 id="newbusiness">New Business to Cover</h2>
-        <ul>
+        <div class="new-business">
+        <h2 id= "new-business-header">New Business to Cover</h2>
+        <ul id="nb-checked-list">
           <li><input type="checkbox">Where the new feeding stations would go?</li>
           <li><input type="checkbox">Some discourse amongst the villagers whose sheep keep getting taken.</li>
           <li><input type="checkbox">Dragon Training - No longer killing.</li>
@@ -125,6 +127,7 @@
             </div>
           </fieldset>
         </form>
+        </div>
       </section>
 
       <section>
